--- a/Devlog/250530.md
+++ b/Devlog/250530.md
@@ -15,4 +15,5 @@ It is taking some time because GPT is doing all the coding and advising me on ho
 I plan to make it a bit more complicated by adding in a few more tables.\
 ex) 5. Category: id(pk), name, number of parent categories, number of child categories, number of products within this category
 
-Here is today's work
+Here is today's work\
+[database image](/images/try3.png)
