--- a/Devlog/250613.md
+++ b/Devlog/250613.md
@@ -12,3 +12,11 @@ The current status of my project is as such\
    - Working on how to actually utilize this one...\
 
 Well then I'll get to work.
+
+
+17:17\
+Today I was able to connect the gpt api and actually make it come up on screen as the user runs the analysis.\
+I also added a simple erd creating page to allow easy analysis of PK and FK.\
+
+Today is the last day of the lecture. I think I might continue this project once I have gained some skills/knowledge.\
+Until then, the feature/langchain-gpt branch will probably remain as the most recent development stage\
